syntax = "proto3";

package studyroom.room_operating_hour.v1;

import "room_operating_hour/room_operating_hour.proto";

// RoomOperatingHour 서비스 정의
service RoomOperatingHourService {
  // 스터디룸 운영 시간 생성
  rpc CreateRoomOperatingHour (CreateRoomOperatingHourRequest) returns (CreateRoomOperatingHourResponse);
  // 특정 스터디룸 운영 시간 조회
  rpc GetRoomOperatingHour (GetRoomOperatingHourRequest) returns (GetRoomOperatingHourResponse);
  // 스터디룸 운영 시간 목록 조회
  rpc ListRoomOperatingHours (ListRoomOperatingHoursRequest) returns (ListRoomOperatingHoursResponse);
  // 스터디룸 운영 시간 정보 업데이트
  rpc UpdateRoomOperatingHour (UpdateRoomOperatingHourRequest) returns (UpdateRoomOperatingHourResponse);
  // 스터디룸 운영 시간 삭제 (소프트 삭제)
  rpc DeleteRoomOperatingHour (DeleteRoomOperatingHourRequest) returns (DeleteRoomOperatingHourResponse);
}
